crates/broza-cli/tests/snapshots/json_snapshots__about_json_matches_the_envelope_snapshot.snap
---
source: crates/broza-cli/tests/json_snapshots.rs
expression: "json_of(&[\"about\", \"--json\"])"
---
{
  "broza_version": "[version]",
  "command": "about",
  "data": {
    "donate_url": "https://ko-fi.com/borlafu",
    "homepage": "https://github.com/borlafu/broza",
    "license": "MIT",
    "name": "Broza",
    "schema_version": "1.1",
    "version": "[version]"
  },
  "errors": [],
  "generated_at": "[rfc3339]",
  "host": {
    "arch": "arm64",
    "macos_version": "26.1"
  },
  "schema_version": "1.1",
  "warnings": []
}
